--- a/PodoDemo/Views/OptionMasters/OptionDetailEdit.cshtml
+++ b/PodoDemo/Views/OptionMasters/OptionDetailEdit.cshtml
@@ -1,5 +1,148 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model PodoDemo.Models.OptionMasterDetail
+
 @{
+    ViewData["Title"] = "세부옵션";
+
+    //팝업일 경우 레이아웃은 팝업 전용으로 변경 아닐 경우 메뉴가 포함된 기본 레이아웃
+    if (ViewBag.isPop)
+    {
+        Layout = "~/Views/Shared/Popup_Layout.cshtml";
+    }
+
+    string isUsedChecked_T = Model.Isused ? "checked" : "";
+    string isUsedChecked_F = Model.Isused ? "" : "checked";
+
+    bool isPop = ViewBag.isPop;
 }
+
+<link href="~/css/Layout_BootstrapCustom.css" rel="stylesheet" />
+<script type="text/javascript">
+    $(document).ready(function () {
+        $("#Isused_T").prop("checked", "@isUsedChecked_T");
+        $("#Isused_F").prop("checked", "@isUsedChecked_F");
+    });
+
+    // 옵션 수정 내용 저장
+    function SubmitForm() {
+        // 유효성 검사 후 진행
+        if (ValidateForm()) {
+            $("#OptionDetailEditForm").prop("action", "/OptionMasters/OptionDetailEdit");
+            $("#OptionDetailEditForm").prop("method", "post");
+            $("#OptionDetailEditForm").submit();
+        }
+    }
+
+    // 옵션 삭제
+    function DeleteOptionmasterDetail() {
+        $("#OptionDetailEditForm").prop("action", "/OptionMasters/DeleteSubmenu");
+        $("#OptionDetailEditForm").prop("method", "post");
+        $("#OptionDetailEditForm").submit();
+    }
+
+    // 입력한 값들에 대한 유효성 검사
+    function ValidateForm() {
+        var name = $("#Name").val();
+        var order = $("#Order").val();
+
+        if (name == "") {
+            alert("옵션 이름을 입력해주세요.");
+            return false;
+        }
+
+        if (order == "") {
+            alert("순서를 입력해주세요.");
+            return false;
+        }
+
+        if (!$('input[name=Isused]:checked').val()) {
+            alert("사용여부에 체크해주세요.");
+            return false;
+        }
+
+        return true;
+    }
+</script>
+<div class="View">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 custom-header">
+                <p class="text-left">세부옵션 수정</p>
+            </div>
+        </div>
+
+        <form id="OptionDetailEditForm" class="form-horizontal">
+            <input type="hidden" id="IsPop" name="IsPop" value="@Html.Raw(isPop)" />
+            <input type="hidden" id="Optionid" name="Optionid" value="@Model.Optionid" />
+            <input type="hidden" id="Masterid" name="Masterid" value="@Model.Masterid" />
+            <input type="hidden" id="Createdate" name="Createdate" value="@Model.Createdate" />
+            <input type="hidden" id="Createuser" name="Createuser" value="@Model.Createuser" />
+            <input type="hidden" id="Modifydate" name="Modifydate" value="@Model.Modifydate" />
+            <input type="hidden" id="Modifyuser" name="Modifyuser" value="@Model.Modifyuser" />
+
+            @Html.AntiForgeryToken()
+
+            <div class="form-group">
+                <label class="col-md-4 control-label">이름</label>
+                <div class="col-md-8">
+                    <input type="text" id="Name" name="Name"
+                           class="form-control"
+                           value="@Model.Name"
+                           placeholder="세부옵션 이름" />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-4 control-label">설명</label>
+                <div class="col-md-8">
+                    <input type="text" id="Description" name="Description"
+                           class="form-control"
+                           value="@Model.Description"
+                           placeholder="설명" />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-4 control-label">순서</label>
+                <div class="col-md-8 custom-input">
+                    <input type="number" id="Order" name="Order"
+                           class="form-control"
+                           value="@Model.Order"
+                           placeholder="세부 옵션 순서" />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-4 control-label">사용여부</label>
+                <div class="col-md-8">
+                    <label class="radio-inline">
+                        <input type="radio" id="Isused_T" name="Isused" value="true" />예
+                    </label>
+                    <label class="radio-inline">
+                        <input type="radio" id="Isused_F" name="Isused" value="false" />아니오
+                    </label>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-6 col-md-2 custom-row-btn-margin">
+                    <button type="button" class="btn btn-default" onclick="SubmitForm();">
+                        <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+                        저장
+                    </button>
+                </div>
+                <div class="col-md-2 custom-row-btn-margin">
+                    <button type="button" id="MenuDeleteButton" class="btn btn-default btn-danger" onclick="DeleteOptionmasterDetail();">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                        삭제
+                    </button>
+                </div>
+                <div class="col-md-2 custom-row-btn-margin">
+                    <button type="button" class="btn btn-default" onclick="window.close();">
+                        <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
+                        닫기
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
