--- a/PodoDemo/Views/Holidays/Index.cshtml
+++ b/PodoDemo/Views/Holidays/Index.cshtml
@@ -1,30 +1,25 @@
-﻿@model string
+﻿@*@model IEnumerable<PodoDemo.Models.Holiday>*@
+@model string
 
 @{
-    ViewData["Title"] = "할일";
-
-    // 팝업 여부 확인
-    if (ViewBag.isPop)
-    {
-        Layout = "~/Views/Shared/Popup_Layout.cshtml";
-    }
+    ViewData["Title"] = "휴가";
 }
 
 <script type="text/javascript">
     $(document).ready(function () {
         GetUserDDL("", '@ViewBag.UserId', 'Ownerid', SetoptionTag, '', true, false, false);     // 담당자
-        GetOptionDDL('5', 'State', SetoptionTag, '', true, false, false);                       // 상태
+        GetOptionDDL('9', 'Type', SetoptionTag, '', true, false, false);                       // 상태
 
         $("#jqdatetimeinput_Startdate").jqxDateTimeInput({ width: '100%', formatString: 'yyyy-MM-dd' }).val("");
 
         SetBasicElement(@Html.Raw(Model));
 
         // 고객타입, 담당자 변경 시 마다 거래처 재검색
-        $("#State, #Ownerid").change(function () {
-            SearchTodoes();
+        $("#Type, #Ownerid").change(function () {
+            SearchHolidays();
         });
 
-        $('#todoList').on('rowdoubleclick', function (event) {
+        $('#holidayList').on('rowdoubleclick', function (event) {
             var args = event.args;
             // row's bound index.
             var boundIndex = args.rowindex;
@@ -35,7 +30,7 @@
             // original event.
             var ev = args.originalEvent;
 
-            var data = $('#todoList').jqxGrid('getrowdata', boundIndex);
+            var data = $('#holidayList').jqxGrid('getrowdata', boundIndex);
 
             @*
                 팝업 여부에 따라 팝업이면 기본적으로 거래처 검색 페이지라고 생각해야 한다.
@@ -43,39 +38,38 @@
             @if (ViewBag.isPop)
             {
                 <text>
-            if (typeof window.opener.SetRegardingInfo == "function") { window.opener.SetRegardingInfo(data.Todoid, data.Name); window.close(); }
-           
+            if (typeof window.opener.SetRegardingInfo == "function") { window.opener.SetRegardingInfo(data.Holidayid, data.Name); window.close(); }
                 </text>
             }
             else
             {
                 <text>
-            location.href = "/Todoes/Edit/" + data.Todoid;
+            location.href = "/Holidays/Edit/" + data.Todoid;
                 </text>
             }
         });
     });
 
     // 기본적으로 그리는 화면 내용
-    function SetBasicElement(todoListRaw) {
+    function SetBasicElement(holidayListRaw) {
         var source =
             {
-                localdata: todoListRaw,
+                localdata: holidayListRaw,
                 datatype: "json",
                 datafields:
                 [
-                    { name: 'Todoid', type: 'number' },
+                    { name: 'Holidayid', type: 'number' },
                     { name: 'Name', type: 'string' },
                     { name: 'Startdate', type: 'date' },
                     { name: 'Ownerid', type: 'string' },
-                    { name: 'Regardingobjectname', type: 'string' },
-                    { name: 'State', type: 'string' }
+
+                    { name: 'Type', type: 'string' }
                 ]
             };
 
         var dataAdapter = new $.jqx.dataAdapter(source);
 
-        $("#todoList").jqxGrid(
+        $("#holidayList").jqxGrid(
             {
                 width: '100%',
                 source: dataAdapter,
@@ -94,31 +88,30 @@
                 theme: "metroCustom",//테마설정
                 localization: GetLocalizationString(),
                 columns: [
-                    { text: "Todoid", datafield: "Todoid", hidden: true },
+                    { text: "Holidayid", datafield: "Holidayid", hidden: true },
                     { text: "제목", datafield: "Name", align: 'center', cellsalign: 'left', width: '30%', minwidth: '100px' },
-                    { text: "관련항목", datafield: "Regardingobjectname", align: 'center', cellsalign: 'left', width: '20%', minwidth: '100px' },
                     { text: "시작일", datafield: 'Startdate', align: 'center', cellsalign: 'center', width: '15%', minwidth: '100px', cellsformat: 'yyyy-MM-dd' },
-                    { text: "상태", datafield: "State", align: 'center', cellsalign: 'center', width: '15%', minwidth: '100px' },
+                    { text: "종류", datafield: "Type", align: 'center', cellsalign: 'center', width: '15%', minwidth: '100px' },
                     { text: '담당자', datafield: 'Ownerid', align: 'center', cellsalign: 'center', width: '20%', minwidth: '100px' },
                 ]
             });
     }
 
     // 거래처 검색 후 반영
-    function SearchTodoes() {
+    function SearchHolidays() {
         var SearchInfo = new Object();
         SearchInfo.Name = $("#Name").val();
-        SearchInfo.State = $("#State").val();        
+        SearchInfo.State = $("#State").val();
         SearchInfo.Ownerid = $("#Ownerid").val();
         // 값이 없으면 컨트롤러에서 인식 못해서 아예 없애면 기본값으로 들어감
         if ($("#jqdatetimeinput_Startdate").jqxDateTimeInput('getText') != "") {
             SearchInfo.Startdate = $("#jqdatetimeinput_Startdate").jqxDateTimeInput('getText');
         }
 
-        var todoListRaw
-            = ExecuteAjax("POST", "/Todoes/Search", "json", "application/json", JSON.stringify(SearchInfo));
+        var holidayListRaw
+            = ExecuteAjax("POST", "/Holidays/Search", "json", "application/json", JSON.stringify(SearchInfo));
         // 리스트에 반영
-        SetBasicElement(todoListRaw);
+        SetBasicElement(holidayListRaw);
     }
 
 </script>
@@ -128,7 +121,7 @@
         <div class="row">
             <div class="col-md-12 custom-header">
                 <p class="text-left">
-                    할일 목록
+                    휴가 목록
                 </p>
             </div>
         </div>
@@ -147,12 +140,12 @@
             <div class="form-group">
                 <label class="col-md-1 control-label">제목</label>
                 <div class="col-md-2">
-                    <input type="text" id="Name" name="Name" class="form-control" placeholder="제목 입력" onkeypress="ExecuteEnterkey(SearchTodoes);" />
+                    <input type="text" id="Name" name="Name" class="form-control" placeholder="제목 입력" onkeypress="ExecuteEnterkey(SearchHolidays);" />
                 </div>
 
-                <label class="col-md-1 control-label">상태</label>
+                <label class="col-md-1 control-label">종류</label>
                 <div class="col-md-2">
-                    <select id="State" name="State" class="form-control"></select>
+                    <select id="Type" name="Type" class="form-control"></select>
                 </div>
                 <label class="col-md-1 control-label">시작일자</label>
                 <div class="col-md-2">
@@ -168,7 +161,7 @@
 
             <div class="form-group">
                 <div class="col-md-offset-10 col-md-2">
-                    <button type="button" class="btn btn-default" onclick="SearchTodoes();">
+                    <button type="button" class="btn btn-default" onclick="SearchHolidays();">
                         <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                         검색
                     </button>
@@ -183,7 +176,7 @@
                     <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
                     <span>상세 내용</span>
                 </div>
-                <div id="todoList"></div>
+                <div id="holidayList"></div>
             </div>
         </div>
 
@@ -204,9 +197,9 @@
             {
                 <div class="row">
                     <div class="col-md-2">
-                        <a href="/Todoes/Create" class="btn btn-default">
+                        <a href="/Holidays/Create" class="btn btn-default">
                             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                            할일 생성
+                            휴가 생성
                         </a>
                     </div>
                 </div>
